# UndoFunctionality

Distributed_Collaborative_Task_Tree/deprecated_code/object-recognition/: CMakeLists.txt
Distributed_Collaborative_Task_Tree/deprecated_code/object-recognition/include/: log.h
Distributed_Collaborative_Task_Tree/deprecated_code/object-recognition/src/: qr_test.cc  qt_test.cc
Distributed_Collaborative_Task_Tree/deprecated_code/object-recognition/utils/: CMakeLists.txt
Distributed_Collaborative_Task_Tree/deprecated_code/object-recognition/utils/scripts/: object_detection.py
Distributed_Collaborative_Task_Tree/deprecated_code/object-recognition/utils/src/: vec_merge.cc
Distributed_Collaborative_Task_Tree/deprecated_code/tabletop_segmentation/usc_utilities/: CMakeLists.txt  package.xml
Distributed_Collaborative_Task_Tree/remote_mutex/: CMakeLists.txt  package.xml
Distributed_Collaborative_Task_Tree/remote_mutex/.hg/: dirstate  hgrc  undo.desc
Distributed_Collaborative_Task_Tree/remote_mutex/.hg/cache/: branch2-served  rbc-revs-v1
Distributed_Collaborative_Task_Tree/remote_mutex/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
Distributed_Collaborative_Task_Tree/remote_mutex/.hg/store/data/launch/: table__setting__mutex.launch.i
Distributed_Collaborative_Task_Tree/remote_mutex/launch/: table_setting_mutex.launch  table_setting_mutex_baxter.launch
Distributed_Collaborative_Task_Tree/remote_mutex/src/remote_mutex/: remote_mutex_service.cpp
Distributed_Collaborative_Task_Tree/unr_object_manipulation/: .arclint  CMakeLists.txt  package.xml
Distributed_Collaborative_Task_Tree/unr_object_manipulation/.hg/: dirstate
Distributed_Collaborative_Task_Tree/unr_object_manipulation/.hg/cache/: rbc-revs-v1
Distributed_Collaborative_Task_Tree/unr_object_manipulation/.hg/store/: undo
Distributed_Collaborative_Task_Tree/unr_object_manipulation/.hg/store/data/: package.xml.i  setup.py.i  ~2earcconfig.i  ~2earclint.i
Distributed_Collaborative_Task_Tree/unr_object_manipulation/baxter_table_setting/launch/: peer_connection.launch  peer_connection_baxter.launch  peer_connection_human_baxter_visionManip.launch  peer_connection_human_visionManip.launch  peer_connection_visionManip.launch
Distributed_Collaborative_Task_Tree/unr_object_manipulation/baxter_table_setting/scripts/: peer_connection_interface.py  pick_place_service_visionManip.py
Distributed_Collaborative_Task_Tree/unr_object_manipulation/cmake/: ManipulationGenHeaders.cmake
Distributed_Collaborative_Task_Tree/unr_object_manipulation/cmake/template/: uomconfig.h.in
Distributed_Collaborative_Task_Tree/unr_object_manipulation/include/grasp_server_library/: grasp_server.h
Distributed_Collaborative_Task_Tree/unr_object_manipulation/include/python_bindings_tools/: roscpp_initializer.h
Distributed_Collaborative_Task_Tree/unr_object_manipulation/scripts/: README.md  console_grasp_server.py
Distributed_Collaborative_Task_Tree/unr_object_manipulation/src/grasp_commander/: grasp_commander_service.cc
Distributed_Collaborative_Task_Tree/unr_object_manipulation/src/py_bindings_tools/: roscpp_initializer.cc
Distributed_Collaborative_Task_Tree/unr_object_manipulation/srv/: object_request.srv
dialogue/multi_robot_sim/: CMakeLists.txt  package.xml
dialogue/multi_robot_sim/launch/: .tilt_scan.launch.swp  baxter_solo.launch  multi_robot_rviz.rviz  pr2_multi_moveit.launch  rviz.launch  table_world.launch
dialogue/robotics-task-tree-eval/: DARS_test.yaml  package.xml  test_behavior_network_params.yaml  test_network_AND.yaml  test_network_FULL.yaml  test_network_SANDWICH.yaml  test_network_four_OR.yaml  test_network_visionManip.yaml  test_network_visionManip_ANDTest.yaml
dialogue/robotics-task-tree-eval/include/: log.h
dialogue/robotics-task-tree-eval/include/robotics_task_tree_eval/: node.h
dialogue/robotics-task-tree-eval/launch/: robotics_task_tree_eval_net.launch
dialogue/robotics-task-tree-eval/src/: behavior_network.cc
dialogue/robotics-task-tree-eval/src/robotics_task_tree_eval/: node.cc
dialogue/table_setting_demo/: .arcconfig  CMakeLists.txt  file.txt  file_new.txt  fullmeal.txt  fullmeal_baxter.txt  package.xml  pr2_teatime.txt  sandwich.txt  tea.txt  temp.txt  working_test.txt  working_test.txt~
dialogue/table_setting_demo/include/3d_object_transformation_service/: 3d_object_transformation_service.h
dialogue/table_setting_demo/include/pick_and_place/: pr2_pick_and_place_service.h  pr2_pick_and_place_service.h~
dialogue/table_setting_demo/include/qr/: qr_object_detect.h
dialogue/table_setting_demo/include/table_setting_demo/: table_object_behavior.h  table_object_behavior_VisionManip.h  table_setting_demo_types.h
dialogue/table_setting_demo/launch/: human_multi_demo_baxter_visionManip.launch  human_multi_demo_visionManip.launch  multi_robot_task_demo_visionManip_baxter.launch
dialogue/table_setting_demo/msg/: ObjStatus.msg
dialogue/table_setting_demo/params/: NodeDescription_AND.yaml  NodeDescription_THEN.yaml  NodeDescription_full.yaml  NodeDescription_old.yaml  collaborative_test.yaml
dialogue/table_setting_demo/scripts/: merge_pose_files.py  parse_task_tree.py  plane_publisher.py
dialogue/table_setting_demo/scripts/moveit_setup_pickandplace/: README.md  pr2_moveit_demp.launch
dialogue/table_setting_demo/src/: multi_robot_network.cc  multi_robot_network_visionManip.cpp  table_object_behavior.cpp
dialogue/table_setting_demo/src/3d_object_transformation_service/: 3d_object_trans_service.cc  3d_object_transformation_service.cc
dialogue/table_setting_demo/src/pick_and_place/: pick_and_place_service.cc  pr2_pick_and_place_service.cc
dialogue/table_setting_demo/src/qr/: qr_object_detect.cc
dialogue/table_setting_demo/srv/: object_position.srv
dialogue/table_setting_demo/testing/launch/: collaborative_test_debug.launch
dialogue/table_setting_demo/testing/params/: collab_params.yaml
dialogue/table_setting_demo/testing/src/: collaborative_behavior.cc
dialogue/tilt_scan/: package.xml  setup.py
dialogue/tilt_scan/scripts/: assemble_scans.py
(+378 files in other folders)
