<?xml version="1.0"?>
<package>
  <name>unr_object_manipulation</name>
  <version>0.0.1</version>
  <description>The unr_object_manipulation package</description>

  <maintainer email="fraser@cse.unr.edu">Luke Fraser</maintainer>

  <license>GPLv3</license>

  <author email="fraser@cse.unr.edu">Luke Fraser</author>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <!-- <run_depend>std_msgs</run_depend> -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
