<?xml version="1.0"?>
<package>
  <name>multi_robot_sim</name>
  <version>0.0.1</version>
  <description>The multi_robot_sim package</description>

  <maintainer email="dave@cse.unr.edu">David Feil-Seifer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>baxter_description</build_depend>
  <build_depend>pr2_gazebo</build_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>pr2_gazebo</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
