<?xml version="1.0"?>
<package>
  <name>tilt_scan</name>
  <version>0.0.0</version>
  <description>The tilt_scan package</description>

  <maintainer email="dave@cse.unr.edu">David Feil-Seifer</maintainer>
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/tilt_scan</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
